--- a/applications/portal/Dockerfile
+++ b/applications/portal/Dockerfile
@@ -8,10 +8,10 @@ ENV APP_DIR=/app
 WORKDIR ${APP_DIR}
 COPY frontend/package.json ${APP_DIR}
 COPY frontend/package-lock.json ${APP_DIR}
-RUN npm ci
+RUN yarn install --frozen-lockfile --timeout 60000
 
 COPY frontend ${APP_DIR}
-RUN npm run build
+RUN yarn build
 
 #####
 
