--- a/applications/portal/Dockerfile
+++ b/applications/portal/Dockerfile
@@ -7,7 +7,7 @@ ENV APP_DIR=/app
 
 WORKDIR ${APP_DIR}
 COPY frontend/package.json ${APP_DIR}
-COPY frontend/package-lock.json ${APP_DIR}
+COPY frontend/yarn.lock ${APP_DIR}
 RUN yarn install --frozen-lockfile --timeout 60000
 
 COPY frontend ${APP_DIR}
