--- a/applications/portal/frontend/package.json
+++ b/applications/portal/frontend/package.json
@@ -25,11 +25,12 @@
     "axios": "^0.21.4",
     "formik": "^2.2.9",
     "keycloak-js": "^19.0.1",
-    "pluralize": "^8.0.0",
     "lodash.debounce": "^4.0.8",
+    "pluralize": "^8.0.0",
     "react": "^17.0.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.0",
+    "react-gtm-module": "^2.0.11",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-slick": "^0.29.0",
