AREG-64 fix vendor pages issue

--- a/applications/portal/deploy/values-test.yaml
+++ b/applications/portal/deploy/values-test.yaml
@@ -3,6 +3,9 @@ harness:
     auto: true
     type: postgres
     size: 10Gi
+  deployment:
+    replicas: 1
+  
   accounts:
     roles:
       - portal:administrator
