--- a/applications/portal/frontend/package.json
+++ b/applications/portal/frontend/package.json
@@ -22,8 +22,8 @@
     "@mui/material": "^5.10.6",
     "@mui/styles": "^5.10.6",
     "@mui/x-data-grid": "^5.14.0",
-    "axios": "^0.21.4",
-    "formik": "^2.2.9",
+    "axios": "^1.6.7",
+    "formik": "^2.4.5",
     "keycloak-js": "^19.0.1",
     "lodash.debounce": "^4.0.8",
     "pluralize": "^8.0.0",
@@ -33,9 +33,9 @@
     "react-gtm-module": "^2.0.11",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
-    "react-slick": "^0.29.0",
+    "react-slick": "^0.30.0",
     "slick-carousel": "^1.8.1",
-    "use-clipboard-copy": "^0.1.2",
+    "use-clipboard-copy": "^0.2.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -45,12 +45,11 @@
     "@babel/preset-react": "^7.8.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
-    "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-module-resolver": "^5.0.0",
     "babel-preset-minify": "^0.5.1",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^7.1.2",
     "copy-webpack-plugin": "^6.2.1",
-    "css-loader": "^5.2.4",
     "dotenv": "^16.0.2",
     "eslint": "5.16.0",
     "eslint-plugin-jest": "^23.8.2",
@@ -59,17 +58,14 @@
     "file-loader": "^5.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^5.5.0",
-    "image-webpack-loader": "^8.1.0",
-    "less": "^3.10.3",
-    "less-loader": "^6.1.2",
-    "less-vars-to-js": "^1.3.0",
-    "raw-loader": "^4.0.2",
-    "style-loader": "^1.1.3",
     "ts-loader": "^9.0.0",
     "typescript": "^4.8.3",
     "webpack": "^5.61.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^4.5.0",
     "webpack-merge": "^5.7.0"
+  },
+  "resolutions": {
+    "graceful-fs": "^4.2.11"
   }
 }
