Fix frontend build

--- a/applications/portal/Dockerfile
+++ b/applications/portal/Dockerfile
@@ -1,7 +1,6 @@
-ARG CLOUDHARNESS_FRONTEND_BUILD
 ARG CLOUDHARNESS_DJANGO
 
-FROM $CLOUDHARNESS_FRONTEND_BUILD as frontend
+FROM node:20 as frontend
 
 ENV APP_DIR=/app
 
