--- a/applications/pgadmin/deploy/charts/values.yaml
+++ b/applications/pgadmin/deploy/charts/values.yaml
@@ -18,9 +18,11 @@ pgadmin:
 
   ## pgadmin config, Any custom environment variabls. Settings in config.py can be overriden with an environment variable using the prefix: PGADMIN_CONFIG_
   ## eg turn off enhanced cookie protection for default AKS, loadbalancer installation
-  #config:
-  #  - name: "PGADMIN_CONFIG_ENHANCED_COOKIE_PROTECTION"
-  #    value: "False"
+  config:
+    - name: "PGADMIN_CONFIG_ENHANCED_COOKIE_PROTECTION"
+      value: "False"
+    - name: "PGADMIN_CONFIG_WTF_CSRF_CHECK_DEFAULT"
+      value: "False"
   
 ## Enable persistence using Persistent Volume Claims
 ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
