--- a/applications/portal/Dockerfile
+++ b/applications/portal/Dockerfile
@@ -16,6 +16,10 @@ RUN yarn build
 
 FROM $CLOUDHARNESS_DJANGO
 
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    postgresql-client \
+    && rm -rf /var/lib/apt/lists/*
+
 WORKDIR ${APP_DIR}
 RUN mkdir -p ${APP_DIR}/static/www
 
