--- a/applications/common/deploy/values-prod.yaml
+++ b/applications/common/deploy/values-prod.yaml
@@ -1,4 +1,5 @@
 harness:
   env:
     - name: SENTRY_DSN
-      value: https://57b1ca8a70634782bd6c90dd119eeab5@sentry.metacell.us/9
+      value: https://57b1ca8a70634782bd6c90dd119eeab5@o4506739169951744.ingest.sentry.io/4506758817382404
+      
