--- a/applications/portal/deploy/values-dev.yaml
+++ b/applications/portal/deploy/values-dev.yaml
@@ -1,6 +1,14 @@
 harness:
+  
   deployment:
     replicas: 1
   database:
     size: 20Gi
 
+sentry:
+  sample_rate: 1.0
+  traces_sample_rate: 0
+  traces_sample_rate_resources: 0
+  traces_sample_rate_patterns:
+    "/api/": 0
+    "/admin/": 0
