--- a/.github/workflows/trivy-analysis.yml
+++ b/.github/workflows/trivy-analysis.yml
@@ -44,12 +44,13 @@ jobs:
           DOCKER_BUILDKIT=1 docker build -t portal:${{ github.sha }}  --build-arg CLOUDHARNESS_DJANGO=cloudharness-django:${{ github.sha }} ./applications/portal
 
       - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@sarif-support-2
+        uses: aquasecurity/trivy-action@master
         with:
           image-ref: 'portal:${{ github.sha }}'
           format: 'sarif'
           output: 'trivy-results.sarif'
+          severity: 'CRITICAL,HIGH'
       - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: 'trivy-results.sarif'
