--- a/deployment/codefresh-dev.yaml
+++ b/deployment/codefresh-dev.yaml
@@ -248,7 +248,8 @@ steps:
       cmd_ps: --wait --timeout 600s --create-namespace
       custom_value_files:
       - ./deployment/helm/values.yaml
-      custom_values: []
+      custom_values:
+      - apps_portal_harness_secrets_scicrunch-api-key=${{SCICRUNCH-API-KEY}}
   build_test_images:
     title: Build test images
     type: parallel
