--- a/applications/portal/backend/requirements.txt
+++ b/applications/portal/backend/requirements.txt
@@ -2,6 +2,7 @@ gdown>=4.6.0
 pandas==1.4.4
 django-import-export==3.0.1
 psycopg2-binary==2.9.6
+django-prometheus==2.3.1
 
 # Security
 starlette>=0.36.2
