--- a/applications/portal/backend/requirements.txt
+++ b/applications/portal/backend/requirements.txt
@@ -2,9 +2,8 @@ gdown>=4.6.0
 pandas==1.4.4
 django-import-export==3.0.1
 django-prometheus==2.3.1
+django-simple-history==3.7.0
 psycopg2-binary==2.9.6
-
-# Security
 starlette>=0.36.2
 pillow >= 10.2.0
 fastapi >= 0.109.1
