--- a/applications/portal/frontend/package.json
+++ b/applications/portal/frontend/package.json
@@ -16,12 +16,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@mui/icons-material": "^5.10.6",
-    "@mui/material": "^5.10.6",
-    "@mui/styles": "^5.10.6",
-    "@mui/x-data-grid": "^5.14.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.0",
+    "@mui/material": "^6.1.0",
+    "@mui/system": "^6.1.0",
+    "@mui/x-data-grid": "^6.0.0",
     "axios": "^1.6.7",
     "formik": "^2.4.5",
     "keycloak-js": "^19.0.1",
