Fix local web server redirect issue

--- a/applications/portal/frontend/package.json
+++ b/applications/portal/frontend/package.json
@@ -10,7 +10,7 @@
     "build-dev": "webpack --config webpack.config.js --env mode=development",
     "prestart": "eslint . --color --fix",
     "start": "webpack serve --progress  --env DOMAIN=http://localhost:8000 --config webpack.config.dev.js",
-    "start:dev": "webpack serve --progress  --env DOMAIN=https://areg.dev.metacell.us --config webpack.config.dev.js",
+    "start:dev": "webpack serve --progress  --env DOMAIN=https://www.areg.dev.metacell.us --config webpack.config.dev.js",
     "start:local": "webpack serve --progress --env DOMAIN=http://areg  --env ACCOUNTS_API_DOMAIN=http://api.accounts.areg  --config webpack.config.dev.js"
   },
   "author": "",
