--- a/applications/portal/supervisord.properties
+++ b/applications/portal/supervisord.properties
@@ -10,7 +10,7 @@ stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
 
 [program:django]
-command=uvicorn --workers 4 --host 0.0.0.0 --port 8000 main:app
+command=uvicorn --workers 4 --host 0.0.0.0 --port 8000 --timeout-keep-alive 600 main:app
 autorestart=true
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
