--- a/applications/portal/deploy/resources/nginx.conf
+++ b/applications/portal/deploy/resources/nginx.conf
@@ -34,11 +34,27 @@ http {
         location ~ ^/(admin|api) {
             proxy_pass http://127.0.0.1:8000;
             client_max_body_size 100M;
+
+            # 10 minute timeout for proxied requests
+            proxy_connect_timeout 600s;
+            proxy_send_timeout 600s;
+            proxy_read_timeout 600s;
+
+            # Buffer settings for large responses
+            proxy_buffering on;
+            proxy_buffer_size 128k;
+            proxy_buffers 4 256k;
+            proxy_busy_buffers_size 256k;
+
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_http_version 1.1;
+            # Handle client disconnections gracefully
+            proxy_ignore_client_abort on;
         }
+
 
     }
 }
