--- a/applications/portal/deploy/values.yaml
+++ b/applications/portal/deploy/values.yaml
@@ -83,9 +83,10 @@ harness:
       initialdb: antibody_registry
     resources:
       requests:
-        memory: 1Gi
-        cpu: 50m
+        memory: 3Gi
+        cpu: 1
       limits:
+        cpu: 4
         memory: 4Gi
   accounts:
     roles:
