--- a/applications/portal/frontend/tsconfig.json
+++ b/applications/portal/frontend/tsconfig.json
@@ -1,21 +1,7 @@
 {
-  "compilerOptions": {
-    "outDir": "./dist/",
-    "sourceMap": true,
-    "noImplicitAny": false,
-    "module": "commonjs",
-    "target": "es2017",
-    "stripInternal": true,
-    "skipLibCheck": true,
-    "alwaysStrict": false,
-    "forceConsistentCasingInFileNames": true,
-    "noImplicitReturns": false,
-    "strict": false,
-    "noUnusedLocals": false,
-    "jsx": "react",
-    "types": [],
-    "esModuleInterop": true,
-    "resolveJsonModule": true
-  },
-  "exclude": ["node_modules"]
+  "files": [],
+  "references": [
+    { "path": "./tsconfig.app.json" },
+    { "path": "./tsconfig.node.json" }
+  ]
 }
