--- a/applications/portal/backend/requirements.txt
+++ b/applications/portal/backend/requirements.txt
@@ -3,8 +3,7 @@ pandas==2.2.3
 django-import-export==3.0.1
 django-prometheus==2.3.1
 django-simple-history==3.7.0
-psycopg2-binary==2.9.6
-starlette>=0.36.2
+psycopg2-binary==2.9.11
 pillow >= 10.2.0
-fastapi >= 0.109.1
+django-ninja>=1.0.0
 sentry-sdk[django]
